// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Exceptions throws for unterminated comments 1`] = `"Your styles have an unterminated comment (\\"/*\\" without corresponding \\"*/\\")."`;

exports[`createStyles() configures hash algorithm 1`] = `"ui-e038ab58"`;

exports[`createStyles() should initialize w/ tokens 1`] = `"width:var(--box-small);height:var(--box-small);"`;

exports[`styles.insertGlobal() passes tokens to global styles 1`] = `
Object {
  "colors": Object {
    "bg": "var(--colors-bg)",
    "blue": "var(--colors-blue)",
    "red": "var(--colors-red)",
    "text": "var(--colors-text)",
  },
}
`;

exports[`styles.keyframes() returns keyframes name 1`] = `"ui-10r5bpr"`;

exports[`styles.variants() adds dev labels: -flex 1`] = `"ui-1ut9bc3-flex"`;

exports[`styles.variants() adds dev labels: -flex-block 1`] = `"ui-14t38od-flex-block"`;

exports[`styles.variants() adds dev labels: -flex-inline 1`] = `"ui-broszf-flex-inline"`;

exports[`styles.variants() allows comments 1`] = `
"
        /* this is a flex style */
        display: flex;
      "
`;

exports[`styles.variants() passes tokens to style callbacks 1`] = `
Object {
  "colors": Object {
    "bg": "var(--colors-bg)",
    "lightSpecific": "var(--colors-light-specific)",
    "text": "var(--colors-text)",
  },
}
`;

exports[`styles.variants() passes tokens to style callbacks 2`] = `"ui-dark-theme"`;

exports[`styles.variants() passes tokens to style callbacks 3`] = `"ui-light-theme"`;

exports[`styles.variants() returns css styles 1`] = `"display:flex;"`;

exports[`styles.variants() returns css styles 2`] = `"display:flex;display:block;display: inline;"`;

exports[`styles.variants() returns css styles 3`] = `"display:flex;display: inline;"`;

exports[`styles.variants() returns single class name 1`] = `"ui-1ut9bc3"`;

exports[`styles.variants() returns single class name 2`] = `"ui-qaw0al"`;

exports[`styles.variants() returns single class name 3`] = `"ui-broszf"`;
